2012-10-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-20060930-2.c:
	  Fixed bug #3577673.

2012-10-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20041210-1.c,
	  support/regression/tests/gcc-torture-execute-20050218-1.c,
	  support/regression/tests/gcc-torture-execute-20051110-1.c,
	  support/regression/tests/gcc-torture-execute-20041112-1.c,
	  support/regression/tests/gcc-torture-execute-20040820-1.c,
	  support/regression/tests/gcc-torture-execute-20040704-1.c,
	  support/regression/tests/gcc-torture-execute-20050826-1.c,
	  support/regression/tests/gcc-torture-execute-20040311-1.c,
	  support/regression/tests/gcc-torture-execute-20040319-1.c,
	  support/regression/tests/gcc-torture-execute-20051110-2.c,
	  support/regression/tests/gcc-torture-execute-20071213-1.c,
	  support/regression/tests/gcc-torture-execute-20040409-1.c,
	  support/regression/tests/gcc-torture-execute-20070724-1.c,
	  support/regression/tests/gcc-torture-execute-20050826-2.c,
	  support/regression/tests/gcc-torture-execute-20051021-1.c,
	  support/regression/tests/gcc-torture-execute-20050613-1.c,
	  support/regression/tests/gcc-torture-execute-20041113-1.c,
	  support/regression/tests/gcc-torture-execute-20050104-1.c,
	  support/regression/tests/gcc-torture-execute-20040409-2.c,
	  support/regression/tests/gcc-torture-execute-20071205-1.c,
	  support/regression/tests/gcc-torture-execute-20041212-1.c,
	  support/regression/tests/gcc-torture-execute-20040409-3.c,
	  support/regression/tests/gcc-torture-execute-20050131-1.c,
	  support/regression/tests/gcc-torture-execute-20040411-1.c,
	  support/regression/tests/gcc-torture-execute-20041114-1.c,
	  support/regression/tests/gcc-torture-execute-20040706-1.c,
	  support/regression/tests/gcc-torture-execute-20040313-1.c,
	  support/regression/tests/gcc-torture-execute-20040831-1.c,