@@ -24,11 +24,10 @@ long long c = ((0x1234567876543210LL + 0x2345678765432101LL) << 32) >> 32;
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
-#ifndef __SDCC_gbz80
+// TODO: Enable when long long literals are supported!
+#if 0
   if (f (a, b) != c)
     ASSERT (0);
   return;
-#endif
 #endif
 }
